Now we can add Multiple items in ToDo List

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -18,7 +18,14 @@
       <li>Buy Food</li>
       <li>Cook Food</li>
       <li>Eat Food</li>
-      <li> <%= newItem %> </li>
+
+      <% for(i=0; i<newlistItem.length; i++) { %>
+
+        <li> <%= newlistItem[i] %> </li>
+
+      <% } %>
+
+
     </ul>
 
     <form class="" action="/" method="post">
