Static Files (Css) Added

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>To Do List</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
@@ -12,26 +13,28 @@
         <h1 style="color: blue">It's a <%= kindOfDay %>!</h1>
     <% } %> -->
 
-    <h1> <%= kindOfDay %> </h1>
+    <div class="box" id="heading">
 
-    <ul>
-      <li>Buy Food</li>
-      <li>Cook Food</li>
-      <li>Eat Food</li>
+      <h1> <%= kindOfDay %> </h1>
 
-      <% for(i=0; i<newlistItem.length; i++) { %>
+    </div>
 
-        <li> <%= newlistItem[i] %> </li>
+    <div class="box">
+      <% for(var i=0; i<newlistItem.length; i++) { %>
+
+      <div class="item">
+        <input type="checkbox">
+        <p> <%= newlistItem[i] %> </p>
+      </div>
 
       <% } %>
 
+      <form class="item" action="/" method="post">
+        <input type="text" name="newItem" placeholder="New Item">
+        <button type="submit" name="button">+</button>
+      </form>
 
-    </ul>
-
-    <form class="" action="/" method="post">
-      <input type="text" name="newItem">
-      <button type="submit" name="button">Add</button>
-    </form>
+    </div>
 
   </body>
 </html>
