--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,15 +7,15 @@
   </head>
   <body>
 
-    <!-- <% if (kindOfDay === "Saturday" || kindOfDay === "Sunday") { %>
-        <h1 style="color: purple">It's a <%= kindOfDay %>!</h1>
+    <!-- <% if (listTitle === "Saturday" || listTitle === "Sunday") { %>
+        <h1 style="color: purple">It's a <%= listTitle %>!</h1>
     <% } else { %>
-        <h1 style="color: blue">It's a <%= kindOfDay %>!</h1>
+        <h1 style="color: blue">It's a <%= listTitle %>!</h1>
     <% } %> -->
 
     <div class="box" id="heading">
 
-      <h1> <%= kindOfDay %> </h1>
+      <h1> <%= listTitle %> </h1>
 
     </div>
 
@@ -30,7 +30,7 @@
       <% } %>
 
       <form class="item" action="/" method="post">
-        <input type="text" name="newItem" placeholder="New Item">
+        <input type="text" name="newItem" placeholder="New Item" autocomplete="off20wwwwwwo">
         <button type="submit" name="button">+</button>
       </form>
 
