--- a/views/list.ejs
+++ b/views/list.ejs
@@ -31,7 +31,7 @@
 
       <form class="item" action="/" method="post">
         <input type="text" name="newItem" placeholder="New Item" autocomplete="off20wwwwwwo">
-        <button type="submit" name="button">+</button>
+        <button type="submit" name="list" value="<%= listTitle %>">+</button>
       </form>
 
     </div>
