Added Master page

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
+<%- include("header") -%>
 
     <!-- <% if (listTitle === "Saturday" || listTitle === "Sunday") { %>
         <h1 style="color: purple">It's a <%= listTitle %>!</h1>
@@ -36,10 +29,4 @@
 
     </div>
 
-  </body>
-
-  <footer>
-    Copyright 2022 Suraj Jasiwal
-  </footer>
-
-</html>
+<%- include("footer") -%>
