Initial DataBase Functionality Added

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -17,7 +17,7 @@
 
       <div class="item">
         <input type="checkbox">
-        <p> <%= newlistItem[i] %> </p>
+        <p> <%= newlistItem[i].item %> </p>
       </div>
 
       <% } %>
