--- a/views/list.ejs
+++ b/views/list.ejs
@@ -27,7 +27,7 @@
       <% } %>
 
       <form class="item" action="/" method="post">
-        <input type="text" name="newItem" placeholder="New Item" autocomplete="off20wwwwwwo">
+        <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
         <button type="submit" name="list" value="<%= listTitle %>">+</button>
       </form>
 
